[project]
name = "ai-eng-entrega-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.14",
    "langchain-openai>=1.4.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
]

[tool.pyright]
typeCheckingMode = "strict"